AWSClientRuntime/Tests/Protocols/RestXML/Models/Errors/ComplexXMLError+ResponseInit.swift
//
// Copyright Amazon.com Inc. or its affiliates.
// All Rights Reserved.
//
// SPDX-License-Identifier: Apache-2.0
//
        
// Code generated by smithy-swift-codegen. DO NOT EDIT!

import AWSClientRuntime
import ClientRuntime

extension ComplexXMLError: AWSHttpServiceError {
    public init (httpResponse: HttpResponse, decoder: ResponseDecoder? = nil, message: String? = nil, requestID: String? = nil) throws {
        if let headerHeaderValue = httpResponse.headers.value(for: "X-Header") {
            self.header = headerHeaderValue
        } else {
            self.header = nil
        }

        if case .stream(let reader) = httpResponse.body,
            let responseDecoder = decoder {
            let data = reader.toBytes().toData()
            let output: ErrorResponseContainer<ComplexXMLErrorBody> = try responseDecoder.decode(responseBody: data)
            self.nested = output.error.nested
            self.topLevel = output.error.topLevel
        } else {
            self.nested = nil
            self.topLevel = nil
        }

        self._headers = httpResponse.headers
        self._statusCode = httpResponse.statusCode
        self._requestID = requestID
        self._message = message
    }
}
